--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <main class="qr-card">
       <div class="qr-code">
-        <img src="https://iili.io/D3QxQR.png" alt="image qr code" class="qr-code">
+        <img src="https://github.com/d0nda/qr-code-card/blob/main/image-qr-code.png" alt="image qr code" class="qr-code">
       </div>
       <h2>Improve your front-end <br /> skills by building projects</h2>
       <p>Scan the QR code to visit Frontend <br /> Mentor and take your coding skills to <br /> the next level</p>
